tests/NormalTests/paczka1/small_fuzzy/22113636.err
Error in line 5: FClOKuODVE A269 9,3
Error in line 9: PGFqbhn2 S857 78,0
